Bug 474490 - Crash after leaving multiple rooms
Summary: Crash after leaving multiple rooms
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.08.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-09-13 14:22 UTC by Unknown
Modified: 2023-09-21 16:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2023-09-13 14:22:58 UTC
Application: neochat (23.08.0)

Qt Version: 5.15.10
Frameworks Version: 5.109.0
Operating System: Linux 6.5.2-zen1-1-zen x86_64
Windowing System: X11
Distribution: Arch Linux
DrKonqi: 5.27.7 [KCrashBackend]

-- Information about the crash:
I was leaving multiple rooms (20+) and then the app crashed.  Have not attempted to reproduce.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: NeoChat (neochat), signal: Segmentation fault

[KCrash Handler]
#4  Quotient::Room::id() const (this=this@entry=0x0) at /usr/src/debug/libquotient/libQuotient-0.8.1.1/Quotient/room.cpp:531
#5  0x000055a8cf3b7529 in RoomManager::leaveRoom(NeoChatRoom*) (this=0x55a8cf5720a0 <RoomManager::instance()::_instance>, room=0x0) at /usr/src/debug/neochat/neochat-23.08.0/src/roommanager.cpp:266
#6  0x000055a8cf3b9393 in RoomManager::qt_metacall(QMetaObject::Call, int, void**) (this=0x55a8cf5720a0 <RoomManager::instance()::_instance>, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0x7ffcb4995fc0) at /usr/src/debug/neochat/build/src/neochat_autogen/include/moc_roommanager.cpp:368
#7  0x00007f142f6784b4 in QQmlObjectOrGadget::metacall(QMetaObject::Call, int, void**) const (this=0x7ffcb4996260, type=QMetaObject::InvokeMetaMethod, index=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlobjectorgadget.cpp:51
#8  0x00007f142f578ac1 in CallMethod (callType=<optimized out>, callArgs=<optimized out>, engine=<optimized out>, argTypes=<optimized out>, argCount=<optimized out>, returnType=<optimized out>, index=<optimized out>, object=<optimized out>) at /usr/include/qt/QtCore/qvarlengtharray.h:189
#9  CallPrecise(QQmlObjectOrGadget const&, QQmlPropertyData const&, QV4::ExecutionEngine*, QV4::CallData*, QMetaObject::Call) (object=<optimized out>, data=<optimized out>, engine=<optimized out>, callArgs=<optimized out>, callType=<optimized out>) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:1553
#10 0x00007f142f57def6 in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const (this=<optimized out>, thisObject=0x7f13ee1c1538, argv=<optimized out>, argc=1) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:2115
#11 0x00007f142f5a107e in QV4::FunctionObject::call(QV4::Value const*, QV4::Value const*, int) const (argc=1, argv=0x7f13ee1c1550, thisObject=0x7f13ee1c1538, this=0x7ffcb49963a8) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/jsruntime/qv4functionobject_p.h:202
#12 QV4::Runtime::CallPropertyLookup::call(QV4::ExecutionEngine*, QV4::Value const&, unsigned int, QV4::Value*, int) (engine=0x55a8d17b1360, base=..., index=<optimized out>, argv=0x7f13ee1c1550, argc=1) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:1460
#13 0x00007f13ec903b0b in  ()
#14 0x00007ffcb49965e0 in  ()
#15 0x0000000000000000 in  ()
[Inferior 1 (process 17525) detached]

The reporter indicates this bug may be a duplicate of or related to bug 465224.

Reported using DrKonqi
Comment 1 Bug Janitor Service 2023-09-20 13:10:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1302
Comment 2 Tobias Fella 2023-09-21 16:43:20 UTC
Git commit f0a7216b4b003924058c33a73c3ac2aa50ce94e8 by Tobias Fella.
Committed on 21/09/2023 at 18:38.
Pushed by tfella into branch 'master'.

Don't crash when trying to leave empty room

M  +3    -0    src/roommanager.cpp

https://invent.kde.org/network/neochat/-/commit/f0a7216b4b003924058c33a73c3ac2aa50ce94e8