Don't crash when trying to leave empty room

BUG: 474490